fix to error pages text

--- a/Websites/fermiumlabs_com/errors/400.md
+++ b/Websites/fermiumlabs_com/errors/400.md
@@ -4,7 +4,9 @@ title:  Error 400
 menu: white
 ---
 # 400 
+
 # BAD REQUEST
 
-## Very sorry, we'll deal with it.
-#### Head back to our [Homepage](https://fermiumlabs.com)
+## We'll deal with it.
+
+### Head back to our [Homepage](https://fermiumlabs.com)
