--- a/Websites/fermiumlabs_com/errors/401.md
+++ b/Websites/fermiumlabs_com/errors/401.md
@@ -3,8 +3,10 @@ layout: page
 title:  Error 401
 menu: white
 ---
-# 401 
+# 401
+ 
 # UNAUTHORIZED
 
-## Very sorry, we'll deal with it.
-#### Head back to our [Homepage](https://fermiumlabs.com)
+## We'll deal with it.
+
+### Head back to our [Homepage](https://fermiumlabs.com)
