--- a/Websites/fermiumlabs_com/errors/403.md
+++ b/Websites/fermiumlabs_com/errors/403.md
@@ -4,7 +4,9 @@ title:  Error 403
 menu: white
 ---
 # 403 
+
 # FORBIDDEN
 
-## Very sorry, we'll deal with it.
-#### Head back to our [Homepage](https://fermiumlabs.com)
+## We'll deal with it.
+
+### Head back to our [Homepage](https://fermiumlabs.com)
