--- a/Websites/fermiumlabs_com/errors/404.md
+++ b/Websites/fermiumlabs_com/errors/404.md
@@ -4,7 +4,9 @@ title:  Error 404
 menu: white
 ---
 # 404 
+
 # NOT FOUND
 
-## Very sorry, we'll deal with it.
-#### Head back to our [Homepage](https://fermiumlabs.com)
+## We'll deal with it.
+
+### Head back to our [Homepage](https://fermiumlabs.com)
