--- a/Websites/fermiumlabs_com/errors/500.md
+++ b/Websites/fermiumlabs_com/errors/500.md
@@ -4,7 +4,9 @@ title:  Error 500
 menu: white
 ---
 # 500 
+
 # INTERNAL SERVER ERROR
 
-## Very sorry, we'll deal with it.
-#### Head back to our [Homepage](https://fermiumlabs.com)
+## We'll deal with it.
+
+### Head back to our [Homepage](https://fermiumlabs.com)
